2000-08-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdbprocessor.in:
	    Process the owner/group/mode triplet too.

2000-08-18  Ambrose Li <acli@ada.dhs.org>

	* configure.in, acconfig.h, scheduler/transport.c,
	  transports/smtp/getmxrr.c:
	    Linux 2.2.* with libc5 fixes.

2000-08-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/policytest.c, router/libdb/bsdhash.c,
	  router/libdb/bsdbtree.c, utils/makedb/makedb.c,
	  utils/vacation/vacation.c:
	    RedHat 6.0 BSD DB surprised somewhat... Fixes for
	    the configuration senses.

	* configure.in, libs/Makefile.in:
	    library building order correction, and autoconfiguration
	    straightening so that lack of dbm databases is reported
	    corrently. (The NDBM even with its faults is sort of ok,
	    but the DBM - its predecessor - is not...)

2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* include/libz.h, scheduler/scheduler.c, scheduler/update.c,
	  lib/esyslib.c, include/ta.h:
	    To track strange looking  eunlink()  problem reported by
	    Eugene my first approach is to add identity tags for eunlink()
	    calls so I can have some additional clue as to *which* of
	    four possible places the problems are occurring at.
	    (Fift place is impossible, fortunately.)

2000-08-02  Eugene Crosser <crosser@online.ru>

	* transports/smtp/getmxrr.c:
	    Yet another wrong index variable usage -- one which affects
	    MX-list purge of self-identity matching of MX servers.
	    Symptom:  "No MX, no address"
	    [mea: That may have been part of the problem,  getaddrinfo()
	          yielding EAI_NONAME in places of EAI_AGAIN may have
		  been another.. -- at least for me.]
	
2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
	
	* libc/getaddrinfo.c, libc/getnameinfo.c:
	    Picked lattest versions out from  GLIBC 2.1.92 source,
	    and cleaned it up to be simple single-threaded thing
	    without locks, and without IPv6 support.
	    STILL PROPABLY LEAKS MEMORY!