@@ -1,3 +1,13 @@
+2000-08-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+
+	* libc/getaddrinfo.c:
+	    Complete IPv4/IPv6 functionality with proper
+	    timeout error handling, and malloc()ed memory
+	    garbage collection.  This supplies the function
+	    for   --with-ipv6-replacement-libc   cfg option.
+	    (Necessary at all systems with GNU LIBC versions
+	     up to 2.2.)
+	
 2000-08-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
 	* proto/newdbprocessor.in:
